--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.216.0",
+    "@aws-sdk/util-dynamodb": "^3.218.0",
     "aws-sdk": "^2.1261.0",
     "esbuild": "^0.14.14"
   },
