--- a/template.yaml
+++ b/template.yaml
@@ -249,9 +249,13 @@ Resources:
       AttributeDefinitions:
         - AttributeName: "connectionId"
           AttributeType: "S"
+        - AttributeName: "lobbyId"
+          AttributeType: "S"
       KeySchema:
         - AttributeName: "connectionId"
           KeyType: "HASH"
+        - AttributeName: "lobbyId"
+          KeyType: RANGE
       ProvisionedThroughput:
         ReadCapacityUnits: 1
         WriteCapacityUnits: 1
